// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProjectCostFilter > Snapshot > matches snapshot with all filters active 1`] = `
<div
  class="space-y-4"
>
  <div
    class="flex items-center gap-3 flex-wrap"
  >
    <div
      class="flex items-center gap-2 px-4 py-2 bg-white/[0.05] rounded-xl border border-white/10"
    >
      <svg
        class="h-4 w-4 text-slate-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
      />
      <span
        class="text-sm text-slate-300"
      >
        显示成本
      </span>
      <button
        aria-checked="true"
        role="switch"
      />
    </div>
    <div
      class="flex items-center gap-2 px-4 py-2 bg-white/[0.05] rounded-xl border border-white/10"
    >
      <svg
        class="h-4 w-4 text-red-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
      />
      <span
        class="text-sm text-slate-300"
      >
        仅超支项目
      </span>
      <button
        aria-checked="true"
        class="bg-red-500"
        role="switch"
      />
    </div>
    <div
      data-testid="select"
      value="created_at_desc"
    >
      <div
        class="w-48 bg-white/[0.05] border-white/10"
        data-testid="selecttrigger"
      >
        <div
          data-testid="selectvalue"
          placeholder="选择排序方式"
        />
      </div>
      <div
        class="bg-slate-800 border-white/10"
        data-testid="selectcontent"
      >
        <div
          data-testid="selectitem"
          value="created_at_desc"
        >
          <div
            class="flex items-center gap-2"
          >
            <svg
              class="h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
            />
            <span>
              创建时间（新→旧）
            </span>
          </div>
        </div>
        <div
          data-testid="selectitem"
          value="cost_desc"
        >
          <div
            class="flex items-center gap-2"
          >
            <svg
              class="h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
            />
            <span>
              成本（高→低）
            </span>
          </div>
        </div>
        <div
          data-testid="selectitem"
          value="cost_asc"
        >
          <div
            class="flex items-center gap-2"
          >
            <svg
              class="h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
            />
            <span>
              成本（低→高）
            </span>
          </div>
        </div>
        <div
          data-testid="selectitem"
          value="budget_used_pct"
        >
          <div
            class="flex items-center gap-2"
          >
            <svg
              class="h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
            />
            <span>
              预算使用率（高→低）
            </span>
          </div>
        </div>
      </div>
    </div>
    <button
      class="hidden sm:flex"
      type="button"
    >
      <svg
        class="h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
      />
      筛选
    </button>
    <button
      class="ml-auto"
      type="button"
    >
      <svg
        class="h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
      />
      导出Excel
    </button>
    <button
      class="text-slate-400 hover:text-white"
      type="button"
    >
      <svg
        class="h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
      />
      清除筛选
    </button>
  </div>
  <div
    class="flex items-center gap-2 flex-wrap"
  >
    <span
      class="text-xs text-slate-500"
    >
      活跃筛选:
    </span>
    <div
      class="text-xs"
      data-testid="badge"
    >
      显示成本
    </div>
    <div
      class="text-xs"
      data-testid="badge"
    >
      仅超支项目
    </div>
  </div>
</div>
`;

exports[`ProjectCostFilter > Snapshot > matches snapshot with default props 1`] = `
<div
  class="space-y-4"
>
  <div
    class="flex items-center gap-3 flex-wrap"
  >
    <div
      class="flex items-center gap-2 px-4 py-2 bg-white/[0.05] rounded-xl border border-white/10"
    >
      <svg
        class="h-4 w-4 text-slate-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
      />
      <span
        class="text-sm text-slate-300"
      >
        显示成本
      </span>
      <button
        aria-checked="false"
        role="switch"
      />
    </div>
    <button
      class="hidden sm:flex"
      type="button"
    >
      <svg
        class="h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
      />
      筛选
    </button>
  </div>
</div>
`;
